--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Nano Metitiere. UX UI Developer" />
+    <meta name="Keywords" content="Web, Digital Designer, UX UI Developer"/>
+    <meta name="author" content="Nano Metitiere" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="logo192.png" />
+    <meta name="Distribution" content="global"/>
+	  <meta name="Revisit" content="1 days"/>
+    <meta name="Googlebot" content="all"/>
+    
+    <meta itemprop="name" content="Nano Metitiere - UX UI Developer">
+	  <meta itemprop="description" content="Nano Metitiere - UX UI Developer">
+	  <meta itemprop="image" content="sherade.jpg">
+
+	  <meta property="og:title" content="Nano Metitiere - UX UI Developert" />
+	  <meta property="og:description" content="Nano Metitiere - UX UI Developer" />
+	  <meta property="og:image" content="sherade.jpg">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Nano Metitiere</title>
+    <title>Nano Metitiere - UX UI Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
