--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="logo192.png" />
+    <link rel="shortcut icon" href="../src/images/avatar.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Nano Metitiere. UX UI Developer" />
     <meta name="Keywords" content="Web, Digital Designer, UX UI Developer"/>
     <meta name="author" content="Nano Metitiere" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="apple-touch-icon" href="../src/images/avatar.jpg" />
     <meta name="Distribution" content="global"/>
 	  <meta name="Revisit" content="1 days"/>
     <meta name="Googlebot" content="all"/>
