--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Nano Metitiere - UX UI Developer</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76836640-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-76836640-1');
+    </script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
