INFO-Y-PORTFOLIO: CAMBIOS DE INFO LINKS REDES Y DESCRIPCION DE PORTFOLIO

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <link rel=”shortcut icon” href=”%PUBLIC_URL%/avatar.jpg”>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Nano Metitiere. UX UI Developer" />
-    <meta name="Keywords" content="Web, Digital Designer, UX UI Developer"/>
+    <meta name="description" content="Valu Tenaglia. Copywriter / UX Writer" />
+    <meta name="Keywords" content="copywriter,ux writer, redacción, marketing digital, publicidad, community manager"/>
     <meta name="author" content="Nano Metitiere" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="../src/images/avatar.jpg" />
@@ -14,12 +14,12 @@
 	  <meta name="Revisit" content="1 days"/>
     <meta name="Googlebot" content="all"/>
     
-    <meta itemprop="name" content="Nano Metitiere - UX UI Developer">
-	  <meta itemprop="description" content="Nano Metitiere - UX UI Developer">
+    <meta itemprop="name" content="Valu Tenaglia - Copywriter / UX Writer">
+	  <meta itemprop="description" content="Valu Tenaglia - Copywriter / Ux Writer">
 	  <meta itemprop="image" content="sherade.jpg">
 
-	  <meta property="og:title" content="Nano Metitiere - UX UI Developert" />
-	  <meta property="og:description" content="Nano Metitiere - UX UI Developer" />
+	  <meta property="og:title" content="Valu Tenaglia - Copywriter / UX Writer" />
+	  <meta property="og:description" content="Valu Tenaglia - Copywriter / UX Writer" />
 	  <meta property="og:image" content="sherade.jpg">
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -35,17 +35,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Nano Metitiere - UX UI Developer</title>
+    <title>Valu Tenaglia - Copywriter / UX Writer</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76836640-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-171131356-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-      gtag('config', 'UA-76836640-1');
-    </script>
+  gtag('config', 'UA-171131356-1');
+</script>
 
   </head>
   <body>
